- Use tabIndex="0" so that event.relatedTarget is defined on Input's blur event, see https://stackoverflow.com/a/42764495 - Move Point interface to src/types - Move Input out of viewport, so that on Android the input text selection controls are not shown - Avoid selecting text content to overwrite it all the time (for now at least)

--- a/packages/scrabble-solver/src/components/Board/components/Input/Input.module.scss
+++ b/packages/scrabble-solver/src/components/Board/components/Input/Input.module.scss
@@ -2,4 +2,5 @@
   border: none;
   opacity: 0;
   font-size: 16px; // prevent iOS from automatically zooming in on focus
+  transform: translateY(-100vh);
 }
